# Chat-va-bien

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  README.md  rfc.md
clnt/: CMakeLists.txt  start.c
config/: db.json
cvb/: CMakeLists.txt  clnt.c  net.c  net.h  srvr.c
cvbsh/: CMakeLists.txt
cvbsh/clnt/: start.c
cvbsh/clnt/include/: auth.h  clnt.h  cmd.h  sock.h
cvbsh/clnt/src/: CMakeLists.txt  auth.c  clnt.c  cmd.c  sock.c  start.c
cvbsh/srvr/config/: db.json
cvbsh/srvr/include/: mdb.h  srvr.h
cvbsh/srvr/src/: CMakeLists.txt  mdb.c  srvr.c  start.c
docs/: CMakeLists.txt
libcvb/: CMakeLists.txt  fdlist.c  msg.c  net.c  srvr.c
libcvb/cvb/: fdlist.h  msg.h  net.h  version.h  version.h.in
libcvb/docs/: CMakeLists.txt  Doxyfile.in
libcvb/include/cvb/: fdlist.h  fdmap.h  logger.h  msg.h  net.h
libcvb/lib/: CMakeLists.txt  fdlist.c  fdmap.c  logger.c  msg.c  net.c
libcvb/unittests/: CMakeLists.txt  test_fdlist.c  test_fdmap.c
liblog/: CMakeLists.txt  log.c  log.h  logger.c  logger.h
logger/: CMakeLists.txt
logger/cmake/: enable-coloration.cmake
logger/examples/: CMakeLists.txt  hw.c
logger/lib/: CMakeLists.txt  logger.c
srvr/: CMakeLists.txt  db.c  db.h  srvr.c  srvr.h  start.c
tests/: CMakeLists.txt  test_fdlist.c
